=== Opus Primus changelog.txt ===
Last revised July 26, 2014
Please note, the Opus Primus copyright can be found at the end of this file.

== Version 1.2.5 ==
* Released July 2014

= Code =
* Added new method `OpusPrimusNavigation::pagination` for moving between pages of posts
* Added new method `OpusPrimusNavigation::pagination_wrapped` to provide actions hooks before and after the `pagination` method
* Added `antispambot` email protection to author biography email addresses
* Added sanity checks to ensure widgets are active before rendering sidebars
* Added `opus_primus_defaults.php` to replace `$opus_defaults` class
* Added `opus-primus-ignite.php` to reduce clutter in `functions.php`
* Added `opus_image_link_navigation_output` filter hook to provide access to navigation output
* Added `opus_tagline` to default hidden screen options array
* Adjusted the `OpusPrimusStructures::the_loop` and `OpusPrimusStructures::the_loop_archives` to use the `pagination_wrapped` method
* Changed navigation method from `posts_link` to `pagination`
* Changed single view first year of copyright to published year of post/page in `OpusPrimusStructures::copyright` method
* Deprecated `OpusPrimusDefaults` class (file may be removed in a future release)
* Enqueue custom stylesheet in an update safe location `/wp-content/opus-primus-customs/`
* Enqueue custom JavaScript in an update safe location `/wp-content/opus-primus-customs/`
* Refactored all defaults using true/false to use filtered define statements
* Remove conditional customization enqueue using internal theme folder
* Renamed `opus-ignite.php` to `opus-primus-ignite.php` and moved to theme root
* Renamed `OpusPrimusNavigation::image_nav` to `OpusPrimusNavigation::image_link_navigation`
* Replaced `OpusPrimusStructures::replace_spaces` with `sanitize_html_class`
* Set Customization path and URL CONSTANTS

= CSS =
* Added `Navigation` section and `Pagination Method` sub-section