@@ -1,5 +1,5 @@
 === Opus Primus changelog.txt ===
-Last revised July 26, 2014
+Last revised July 27, 2014
 Please note, the Opus Primus copyright can be found at the end of this file.
 
 == Version 1.2.5 ==
@@ -21,6 +21,7 @@ Please note, the Opus Primus copyright can be found at the end of this file.
 * Enqueue custom stylesheet in an update safe location `/wp-content/opus-primus-customs/`
 * Enqueue custom JavaScript in an update safe location `/wp-content/opus-primus-customs/`
 * Refactored all defaults using true/false to use filtered define statements
+* Refactored `OpusPrimusTaglines::tagline_create_boxes` to clarify the parameter usage
 * Remove conditional customization enqueue using internal theme folder
 * Renamed `opus-ignite.php` to `opus-primus-ignite.php` and moved to theme root
 * Renamed `OpusPrimusNavigation::image_nav` to `OpusPrimusNavigation::image_link_navigation`
